--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
 
 				<div class="swiper-container swiper-init demo-swiper">
 					<div class="swiper-wrapper">
-						<div class="swiper-slide"><img src="/img/banner-large.png" width="100%"></div>
-						<div class="swiper-slide"><img src="/img/banner-large-2.png" width="100%"></div>
+						<div class="swiper-slide"><img src="img/banner-large.png" width="100%"></div>
+						<div class="swiper-slide"><img src="img/banner-large-2.png" width="100%"></div>
 					</div>
 				</div>
 
